name:                tetris
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              f4814n
category:            Terminal
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tetris
                     , Tetris.Field
                     , Tetris.Color
                     , Tetris.Piece
                     , Tetris.UI
                     , Tetris.UI.Logo
  build-depends:       base >= 4.7 && < 5
                     , matrix
                     , random
                     , Stream
                     , brick
                     , vty
  ghc-options:         -Wall
  default-language:    Haskell2010

executable tetris
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -with-rtsopts=-N -Wall
  build-depends:       base
                     , tetris
  default-language:    Haskell2010

test-suite tetris-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tetris
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/FabianGeiselhart/Tetris
